--- a/commercialoperator/templates/ledgerui/accounts_base_b5.html
+++ b/commercialoperator/templates/ledgerui/accounts_base_b5.html
@@ -1,5 +1,7 @@
 {% extends "ledgerui/accounts_base_b5.html" %}
 
+{% load static %}
+
 {% block myaccount_nav %}
 
 <button class="nav-link managed-account-nav" id="nav-organisations-tab" data-bs-toggle="tab" data-bs-target="#nav-organisations" type="button" role="tab" aria-controls="nav-organisations" aria-selected="false">Organisations</button>
@@ -23,5 +25,12 @@
         </div>
     </div>
 </div>
+
+<link rel="stylesheet" href="{% static 'commercialoperator/css/base.css' %}?v={{build_tag}}">
+<link rel="stylesheet" href="{% static 'commercialoperator/css/app.css' %}?v={{build_tag}}">
+<link rel="stylesheet" href="{% static 'commercialoperator/css/chunk-vendors.css' %}?v={{build_tag}}">
+
+<script type="text/javascript" src="{% static 'commercialoperator_vue/js/chunk-vendors.js' %}?v={{build_tag}}"></script>
+<script type="text/javascript" src="{% static 'commercialoperator_vue/js/app.js' %}?v={{build_tag}}"></script>
 
 {% endblock %}	
