--- a/commercialoperator/templates/webtemplate_dbca/includes/menu_bottom.html
+++ b/commercialoperator/templates/webtemplate_dbca/includes/menu_bottom.html
@@ -14,24 +14,4 @@
 {% if can_show_tests and request.user.is_superuser %}
     <li><a class="dropdown-item" href="{% url 'test-emails' %}">Test Emails</a></li>
 {% endif %}
-    <li><a class="dropdown-item" href="/ledger-ui/accounts">Manage Account (Ledger)</a></li>
-
-<a class="dropdown-item" href="{% url 'manage-account' %}">Manage linked Organisations (COLS)</a>
-
-
-
-
-
-
-
-{% comment %} {% for org in request.user.commercialoperator_organisations.all %}
-    {% for org_contact in org.contacts.all%}
-        {% ifequal org_contact.email request.user.email %}
-            {% if org_contact.user_status == 'active' %}
-                {% if org_contact.is_admin or org_contact.check_consultant %}
-                    <li><a href="/external/organisations/manage/{{org.id}}">Manage {{ org.organisation.name}} </a></li>
-                {% endif %}
-            {% endif %}
-        {% endifequal %}
-    {% endfor %}
-{% endfor %} {% endcomment %}
+    <li><a class="dropdown-item" href="/ledger-ui/accounts">Manage Account</a></li>
