--- a/commercialoperator/templates/webtemplate_dbca/includes/menu_bottom.html
+++ b/commercialoperator/templates/webtemplate_dbca/includes/menu_bottom.html
@@ -15,3 +15,19 @@
     <li><a class="dropdown-item" href="{% url 'test-emails' %}">Test Emails</a></li>
 {% endif %}
     <li><a class="dropdown-item" href="/ledger-ui/accounts">Manage Account</a></li>
+
+{% for org in request.user.commercialoperator_organisations.all %}
+    {% for org_contact in org.contacts.all%}
+        {% if org_contact.email == request.user.email %}
+            {% if org_contact.user_status == 'active' %}
+                {% if org_contact.is_admin or org_contact.check_consultant %}
+                    <li>
+                        <a class="dropdown-item" href="/ledger-ui/organisation/{{org.organisation_id}}" target="_blank">
+                            Manage {{ org.name}} 
+                        </a>
+                    </li>
+                {% endif %}
+            {% endif %}
+        {% endif %}
+    {% endfor %}
+{% endfor %}
